// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityEditorOverview Normal 1`] = `
<div
  className="dd flex-column"
>
  <div>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      id="create-entity-picker"
      onClick={[Function]}
      type="button"
    >
      Create
       
      <span
        className="dd icon icon-chevron-down"
      />
    </button>
  </div>
  <button
    className="dd button has-background hoverable text-button is-selected"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    >
      Foo
    </p>
    <p
      className="dd text-body"
    >
      Foo 1
    </p>
  </button>
  <button
    className="dd button has-background hoverable text-button"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    >
      Bar
    </p>
    <p
      className="dd text-body"
    >
      Bar 1
    </p>
  </button>
  <button
    className="dd button has-background hoverable text-button"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    >
      Bar
    </p>
    <p
      className="dd text-body"
    >
      Bar 2
    </p>
  </button>
  <button
    className="dd button has-background hoverable text-button"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    >
      Foo
    </p>
    <p
      className="dd text-body"
    >
      Foo archived
    </p>
  </button>
</div>
`;

exports[`Storyshots Domain/EntityEditorOverview Slow 1`] = `
<div
  className="dd flex-column"
>
  <div>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      id="create-entity-picker"
      onClick={[Function]}
      type="button"
    >
      Create
       
      <span
        className="dd icon icon-chevron-down"
      />
    </button>
  </div>
  <button
    className="dd button has-background hoverable text-button is-selected"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    />
    <p
      className="dd text-body"
    >
      (Unnamed)
    </p>
  </button>
  <button
    className="dd button has-background hoverable text-button"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    />
    <p
      className="dd text-body"
    >
      (Unnamed)
    </p>
  </button>
  <button
    className="dd button has-background hoverable text-button"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    />
    <p
      className="dd text-body"
    >
      (Unnamed)
    </p>
  </button>
  <button
    className="dd button has-background hoverable text-button"
    onClick={[Function]}
    type="button"
  >
    <p
      className="dd text-subtitle2"
    />
    <p
      className="dd text-body"
    >
      (Unnamed)
    </p>
  </button>
</div>
`;
